# OOP

OOP_Lab_4/: CMakeLists.txt  OOP_Lab_4.sln
OOP_Lab_4/Debug/: OOP_Lab_4.ilk
OOP_Lab_4/OOP_Lab_4/: Figure.h  NTree.h  NTreeNode.h  OOP_Lab_4.vcxproj  OOP_Lab_4.vcxproj.filters  Octagon.h  main.cpp
OOP_Lab_4/OOP_Lab_4/Debug/: vc140.idb
OOP_Lab_4/OOP_Lab_4/Debug/OOP_Lab_4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP_Lab_4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OOP_Lab_5/: CMakeLists.txt  OOP_Lab_5.sln
OOP_Lab_5/Debug/: OOP_Lab_5.ilk
OOP_Lab_5/OOP_Lab_5/: Figure.h  Hexagon.h  Iterator.h  NTree.h  NTreeNode.h  OOP_Lab_5.vcxproj  OOP_Lab_5.vcxproj.filters  Octagon.cpp  main.cpp
OOP_Lab_5/OOP_Lab_5/Debug/: vc140.idb
OOP_Lab_5/OOP_Lab_5/Debug/OOP_Lab_5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OOP_Lab_5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OOP_lab2/: CMakeLists.txt  Hexagon.cpp  Hexagon.h  NTree.cpp  NTree.h  NTreeNode.cpp  NTreeNode.h  Tree.cpp  Tree.h  main.cpp
OOP_lab3/: CMakeLists.txt  Figure.h  Hexagon.cpp  Hexagon.h  NTree.cpp  NTree.h  NTreeNode.cpp  NTreeNode.h  Octagon.cpp  Octagon.h  Triangle.cpp  Triangle.h  main.cpp
